drone-ci/server/droneserver-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-drone-ci
  namespace: drone
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules: 
    - host: drone.geek.zone 
      http:
        paths:
          - path: /
            backend:
              serviceName: droneserver 
              servicePort: 80
